Welcome page is started, all html and scss is linked with gulp, gulp is now plumbed and instantly refreshing when errors occur

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html ng-app='trackOurTruck'>
   <head>
     <meta charset="utf-8">
-    <link href="./bundle.css" />
+    <link rel="stylesheet" type="text/css" href="./bundle.css">
     <title></title>
   </head>
   <body>
