Welcome page now has hover effects, logo, fonts, button effect, sloped content div

--- a/src/ui-views/welcome.html
+++ b/src/ui-views/welcome.html
@@ -2,9 +2,15 @@
 
     <section class="welcome-header">
 
+
+      <div class="logo-cont">
+
         <section class="logo">
 
         </section>
+
+      </div>
+
 
         <section class="welcome-menu">
           <ul>
@@ -28,15 +34,48 @@
           </div>
 
           <h3>deserunt mollit anim id est laborum.</h3>
-
-          <button type="button" name="button">Signup Now</button>
+          <div class="welcome-button-container">
+            <button type="button" name="button">Signup Now</button>
+          </div>
 
         </section>
 
     </section>
-    <section class="welcome-footer">
-      <section class="footer-menu">
-
-      </section>
-    </section>
 </section>
+
+
+<div class="welcome-sloped-cont">
+
+  <section class="welcome-sloped">
+
+    <div class="slope-content">
+
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+      </p>
+
+    </div>
+
+
+  </section>
+
+
+</div>
+
+
+
+
+
+
+
+    <!-- <section class="welcome-footer">
+
+      <section class="footer-menu">
+        <ul>
+          <li>One</li>
+          <li>Two</li>
+          <li>Three</li>
+        </ul>
+      </section>
+
+    </section> -->
