Added content to welcome page, added testing inputs for signup and login pages

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="./bundle.css">
+    <link href="https://file.myfontastic.com/ycdPAxbMz73NaPQmxVwiTF/icons.css" rel="stylesheet">
     <title></title>
   </head>
   <body>
