--- a/src/ui-views/welcome.html
+++ b/src/ui-views/welcome.html
@@ -46,23 +46,61 @@
 
 <div class="welcome-sloped-cont">
 
-  <section class="welcome-sloped">
+  <div class="slope-content">
 
-    <div class="slope-content">
+    <h3>Por Incididunt</h3>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+    </p>
 
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-      </p>
-
-    </div>
+  </div>
 
 
-  </section>
+  <section class="welcome-sloped"></section>
 
+  <section class="welcome-mid-section"></section>
+
+  <section class="welcome-neg-sloped"></section>
 
 </div>
 
+ <section class='welcome-driving'>
 
+    <ul>
+
+        <li>dfghsghg
+          <div class="icon-globe"></div>
+        </li>
+
+        <li>sytj
+          <div class="icon-map-marker"></div>
+        </li>
+
+        <li>fbsfgh
+          <div class="icon-truck"></div>
+        </li>
+
+        <li>jjjt
+          <div class="icon-clock-o"></div>
+        </li>
+
+        <li>etyjety
+          <div class="icon-tachomete"></div>
+        </li>
+
+        <li>strhwrth
+          <div class="icon-calendar"></div>
+        </li>
+
+    </ul>
+
+ </section>
 
 
 
