--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <body>
 
    <ui-view></ui-view>
-
+    <script src="https://cdn.jsdelivr.net/satellizer/0.15.0/satellizer.min.js"></script>
     <script src="./angular/angular.js"></script>
     <script src=./angular-ui-router/release/angular-ui-router.js></script>
     <script src="./bundle.js"></script>
