--- a/src/ui-views/welcome.html
+++ b/src/ui-views/welcome.html
@@ -3,22 +3,22 @@
     <section class="welcome-header">
 
 
-      <div class="logo-cont">
+        <div class="logo-cont">
 
-        <section class="logo">
+            <section class="logo">
 
-        </section>
+            </section>
 
-      </div>
+        </div>
 
 
         <section class="welcome-menu">
-          <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>Login</li>
-            <li>Signup</li>
-          </ul>
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Login</li>
+                <li>Signup</li>
+            </ul>
         </section>
 
     </section>
@@ -27,16 +27,16 @@
 
         <section class="welcome-content">
 
-          <h2>Lorem ipsum dolor sit amet</h2>
+            <h1>Lorem ipsum dolor sit amet</h1>
 
-          <div class="title-bar">
+            <div class="title-bar">
 
-          </div>
+            </div>
 
-          <h3>deserunt mollit anim id est laborum.</h3>
-          <div class="welcome-button-container">
-            <button type="button" name="button">Signup Now</button>
-          </div>
+            <h3>deserunt mollit anim id est laborum.</h3>
+            <div class="welcome-button-container">
+                <button type="button" name="button">Signup Now</button>
+            </div>
 
         </section>
 
@@ -46,67 +46,98 @@
 
 <div class="welcome-sloped-cont">
 
-  <div class="slope-content">
+    <div class="slope-content">
 
-    <h3>Por Incididunt</h3>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-    </p>
+        <h3>Por Incididunt</h3>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+            in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+            in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+            in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+        </p>
 
-  </div>
+    </div>
 
 
-  <section class="welcome-sloped"></section>
+    <section class="welcome-sloped"></section>
 
-  <section class="welcome-mid-section"></section>
+    <section class="welcome-mid-section"></section>
 
-  <section class="welcome-neg-sloped"></section>
+    <section class="welcome-neg-sloped"></section>
 
 </div>
 
- <section class='welcome-driving'>
+<section class='welcome-driving'>
 
-    <ul>
+    <div>
 
-        <li>dfghsghg
-          <div class="icon-globe"></div>
-        </li>
+        <h2>Dolore Magna Aliqua</h2>
 
-        <li>sytj
-          <div class="icon-map-marker"></div>
-        </li>
+    </div>
 
-        <li>fbsfgh
-          <div class="icon-truck"></div>
-        </li>
+    <div>
 
-        <li>jjjt
-          <div class="icon-clock-o"></div>
-        </li>
+        <ul>
 
-        <li>etyjety
-          <div class="icon-tachomete"></div>
-        </li>
+            <li>
+                <div class="icon-globe"></div>
+                <p>
+                    dfghsghg
+                </p>
+            </li>
 
-        <li>strhwrth
-          <div class="icon-calendar"></div>
-        </li>
+            <li>
+                <div class="icon-map-marker"></div>
+                <p>
+                    sytj
+                </p>
+            </li>
 
-    </ul>
+            <li>
+                <div class="icon-truck"></div>
+                <p>
+                    fbsfgh
+                </p>
+            </li>
 
- </section>
+            <li>
+                <div class="icon-clock-o"></div>
+                <p>
+                    jjsdast
+                </p>
+            </li>
+
+            <li>
+                <div class="icon-tachometer"></div>
+                <p>
+                    strhwrth
+                </p>
+            </li>
+
+            <li>
+                <div class="icon-calendar"></div>
+                <p>
+                    strhwrth
+                </p>
+            </li>
+
+        </ul>
+
+    </div>
+
+</section>
 
 
 
 
 
-    <!-- <section class="welcome-footer">
+<!-- <section class="welcome-footer">
 
       <section class="footer-menu">
         <ul>
