got hovers to work on bottom list on welcome page

--- a/src/ui-views/welcome.html
+++ b/src/ui-views/welcome.html
@@ -49,18 +49,33 @@
     <div class="slope-content">
 
         <h3>Por Incididunt</h3>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-            in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-            in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-            in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-        </p>
+
+        <div class="slope-content-lower">
+
+          <div class="slope-content-lower-left">
+          <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+              in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          </p>
+        </div>
+
+          <div class="slope-content-lower-right">
+
+            <div class="welcome-circle">
+              <div class="icon-map">
+                <div class="icon-map-marker marker-one">
+
+                </div>
+                <div class="icon-map-marker marker-two">
+
+                </div>
+
+              </div>
+            </div>
+
+          </div>
+
+        </div>
 
     </div>
 
@@ -87,8 +102,9 @@
 
             <li>
                 <div class="icon-globe"></div>
+
                 <p>
-                    dfghsghg
+                  dfghsghg
                 </p>
             </li>
 
