Home page finished, cosmeticly

--- a/src/ui-views/welcome.html
+++ b/src/ui-views/welcome.html
@@ -48,7 +48,7 @@
 
     <div class="slope-content">
 
-        <h3>Por Incididunt</h3>
+        <h3>Get Real-time Updates</h3>
 
         <div class="slope-content-lower">
 
@@ -90,9 +90,9 @@
 
 <section class='welcome-driving'>
 
-    <div>
+    <div class = "driving-content-view">
 
-        <h2>Dolore Magna Aliqua</h2>
+        <ui-view></ui-view>
 
     </div>
 
@@ -100,46 +100,46 @@
 
         <ul>
 
-            <li>
+            <li ui-sref='welcome.globe'>
                 <div class="icon-globe"></div>
 
                 <p>
-                  dfghsghg
+                  Global Services
                 </p>
             </li>
 
-            <li>
+            <li ui-sref='welcome.marker'>
                 <div class="icon-map-marker"></div>
                 <p>
-                    sytj
+                    GPS Location
                 </p>
             </li>
 
-            <li>
+            <li ui-sref='welcome.truck'>
                 <div class="icon-truck"></div>
                 <p>
-                    fbsfgh
+                    Vehicle Tracking
                 </p>
             </li>
 
-            <li>
+            <li ui-sref='welcome.clock'>
                 <div class="icon-clock-o"></div>
                 <p>
-                    jjsdast
+                    Time Management
                 </p>
             </li>
 
-            <li>
+            <li ui-sref='welcome.speed'>
                 <div class="icon-tachometer"></div>
                 <p>
-                    strhwrth
+                    Speeding Alerts
                 </p>
             </li>
 
-            <li>
+            <li ui-sref='welcome.calender'>
                 <div class="icon-calendar"></div>
                 <p>
-                    strhwrth
+                    Daily Timeline
                 </p>
             </li>
 
@@ -148,6 +148,47 @@
     </div>
 
 </section>
+
+<div class="welcome-sloped-cont">
+
+    <div class="slope-content">
+
+        <h3>Increase your bottom line</h3>
+
+        <div class="slope-content-lower">
+
+          <div class="slope-content-lower-left">
+          <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+              in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          </p>
+        </div>
+
+          <div class="slope-content-lower-right">
+
+            <div class="welcome-circle">
+              <div class="icon-line-chart">
+
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+
+    </div>
+
+
+    <section class="welcome-sloped"></section>
+
+    <section class="welcome-bottom-section"></section>
+
+
+</div>
+
+
+  <footer-dir></footer-dir>
+
 
 
 
