fixed homepage spacing bugs, changed logo, added login modal view

--- a/src/ui-views/welcome.html
+++ b/src/ui-views/welcome.html
@@ -1,3 +1,5 @@
+<modal-dir></modal-dir>
+
 <section class="welcome-background">
 
     <section class="welcome-header">
@@ -16,7 +18,7 @@
             <ul>
                 <li>Home</li>
                 <li>About</li>
-                <li>Login</li>
+                <li ng-click ='loginModal()' ui-sref='welcome.login'>Login</li>
                 <li>Signup</li>
             </ul>
         </section>
