--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <body>
 
    <ui-view></ui-view>
-
+   <script src="https://maps.google.com/maps/api/js?key=AIzaSyCE-IsoxmgBiFRKXn0ZgZcYlLZ1FSvpJns"></script>
     <script src="./angular/angular.js"></script>
     <script src=./angular-ui-router/release/angular-ui-router.js></script>
     <script src="https://cdn.jsdelivr.net/satellizer/0.15.0/satellizer.min.js"></script>
