--- a/src/ui-views/userHomeTmpl.html
+++ b/src/ui-views/userHomeTmpl.html
@@ -1,3 +1,5 @@
+<section class="user-home-main">
+
 <section class="main-side-menu">
    <div class="side-menu-top">
      <h1>PBJ</h1>
@@ -65,7 +67,13 @@
       <div class="icon-right-open"></div>
        </li>
 
-
      </ul>
    </div>
+
+</section>
+
+  <div class="map" map-lazy-load='https://maps.google.com/maps/api/js'>
+    <ng-map zoom='13' center='[40.7608, -111.8910]'></ng-map>
+  </div>
+
 </section>
