add frontend logic for localAuth for user signup/login and admin sighup/login

--- a/src/ui-views/adminSignup.html
+++ b/src/ui-views/adminSignup.html
@@ -2,4 +2,4 @@ ADMIN SIGN UP
 <input ng-model="admin.name" type="input" name="name"  placeholder="name">
 <input ng-model="admin.email" type="email" name="name"  placeholder="email">
 <input ng-model="admin.password" type="password" name="name"  placeholder="password">
-<button ng-click="signUp(admin)" type="button" name="button">sign up</button>
+<button ng-click="signUp(admin)" type="button" name="button">Sign Up</button>
