--- a/src/ui-views/adminLogin.html
+++ b/src/ui-views/adminLogin.html
@@ -2,4 +2,4 @@ ADMIN LOGIN
 
 <input ng-model="admin.email" type="email" name="name"  placeholder="email">
 <input ng-model="admin.password" type="password" name="name"  placeholder="password">
-<button ng-click="login(admin)" type="button" name="button">sign up</button>
+<button ng-click="login(admin)" type="button" name="button">Login</button>
