user home now has top nav bar and gps fitted

--- a/src/ui-views/userHomeTmpl.html
+++ b/src/ui-views/userHomeTmpl.html
@@ -2,7 +2,7 @@
 
 <section class="main-side-menu">
    <div class="side-menu-top">
-     <h1>PBJ</h1>
+     <img src="./LogoTextTeal.png" alt="" />
    </div>
    <div class="side-menu-options">
      <ul>
@@ -14,7 +14,18 @@
              Ddfb
            </p>
          </div>
+
+         <div class="side-menu-end">
+         <section class="car-status">
+
+           <p id="car-idle">
+             Idle
+           </p>
+
+         </section>
         <div class="icon-right-open"></div>
+        </div>
+
        </li>
 
        <li>
@@ -24,7 +35,16 @@
              Btyjw
            </p>
          </div>
+
+         <div class="side-menu-end">
+         <section class="car-status">
+           <p id="car-active">
+             Active
+           </p>
+
+         </section>
         <div class="icon-right-open"></div>
+        </div>
        </li>
 
        <li>
@@ -34,7 +54,16 @@
              Rdhs
            </p>
          </div>
+
+         <div class="side-menu-end">
+         <section class="car-status">
+
+           <p id="car-off">
+             Off
+           </p>
+         </section>
         <div class="icon-right-open"></div>
+        </div>
        </li>
 
        <li>
@@ -44,7 +73,16 @@
              Udfh
            </p>
          </div>
+
+         <div class="side-menu-end">
+         <section class="car-status">
+
+           <p id="car-off">
+             Off
+           </p>
+         </section>
        <div class="icon-right-open"></div>
+       </div>
        </li>
 
        <li>
@@ -54,7 +92,17 @@
              Qdfsfgn
            </p>
          </div>
+
+         <div class="side-menu-end">
+         <section class="car-status">
+
+           <p id="car-idle">
+             Idle
+           </p>
+
+         </section>
         <div class="icon-right-open"></div>
+        </div>
        </li>
 
        <li>
@@ -64,7 +112,16 @@
              Kdfgzg
            </p>
          </div>
+
+         <div class="side-menu-end">
+         <section class="car-status">
+           <p id="car-active">
+             Active
+           </p>
+
+         </section>
       <div class="icon-right-open"></div>
+      </div>
        </li>
 
      </ul>
@@ -72,8 +129,39 @@
 
 </section>
 
+<section class="user-right-section">
+
+  <section class="user-top-menu">
+
+    <div class="dash">
+      <h2>Dashboard</h2>
+    </div>
+    <section class="user-info-cont">
+      <div class="username">
+        <p>
+          Billy Batson
+        </p>
+      </div>
+      <div class="user-icon">
+        <div class="icon-circle-thin">
+          <div class="icon-user">
+
+          </div>
+        </div>
+
+      </div>
+    </section>
+  </section>
+
   <div class="map" map-lazy-load='https://maps.google.com/maps/api/js'>
     <ng-map zoom='13' center='[40.7608, -111.8910]'></ng-map>
   </div>
+
+</section>
+
+
+
+
+
 
 </section>
