--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <link href="https://file.myfontastic.com/ycdPAxbMz73NaPQmxVwiTF/icons.css" rel="stylesheet">
     <title></title>
   </head>
-  <body>
+  <body id="body">
 
    <ui-view></ui-view>
    <script src="https://maps.google.com/maps/api/js?key=AIzaSyCE-IsoxmgBiFRKXn0ZgZcYlLZ1FSvpJns"></script>
