--- a/src/ui-views/welcome.html
+++ b/src/ui-views/welcome.html
@@ -18,7 +18,7 @@
             <ul>
                 <li>Home</li>
                 <li>About</li>
-                <li ui-sref='welcome.login' ng-click ='loginModal()' >Login</li>
+                <li ng-click ='loginModal()' >Login</li>
                 <li>Signup</li>
             </ul>
         </section>
