--- a/src/ui-views/welcomeClock.html
+++ b/src/ui-views/welcomeClock.html
@@ -7,5 +7,5 @@
 </div>
 
 <p>
-   4 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+Te propriae reprehendunt ius, eu dolorum lucilius persequeris vel, homero iudicabit ei nec. Vis assum minim cu. Consul graece nominati te vis, eam te dicta epicurei definitiones. Idque legimus tincidunt vix ea. His ne maiorum reformidans, conceptam cotidieque usu ex.
 </p>
