--- a/src/ui-views/welcomeMarker.html
+++ b/src/ui-views/welcomeMarker.html
@@ -8,5 +8,5 @@
 
 
 <p>
-  2 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  Fuisset platonem sea ad, putent aliquam fierent et cum, zril diceret similique eos no. In saepe graeco ocurreret eum, ex eam impetus conceptam. Cu fabellas reprehendunt concludaturque qui, an vix impetus labitur, ne cum sonet veritus. Elitr quodsi suavitate no mei, id eos stet adipiscing. Aliquid equidem sapientem et has, duo ea appareat periculis. Quidam eleifend ocurreret usu ei.
 </p>
