--- a/src/ui-views/login.html
+++ b/src/ui-views/login.html
@@ -1,6 +1,18 @@
 
-LOGIN
+<section class="signup-cont">
 
-<input ng-model="user.email" type="email" name="name"  placeholder="email">
-<input ng-model="user.password" type="password" name="name"  placeholder="password">
-<button ng-click="login(user)" type="button" name="button">sign up</button>
+  <section>
+
+    LOGIN
+
+    <input ng-model="user.email" type="email" name="name"  placeholder="email">
+    <input ng-model="user.password" type="password" name="name"  placeholder="password">
+    <button ng-click="login(user)" type="button" name="button">sign up</button>
+
+  </section>
+
+  <section>
+
+  </section>
+
+</section>
