--- a/src/ui-views/welcomeGlobe.html
+++ b/src/ui-views/welcomeGlobe.html
@@ -7,5 +7,5 @@
 </div>
 
 <p>
-  1 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+Duo facilis reprehendunt ad, id quas audiam eum. Ex has affert mentitum omittantur. Ut dicunt cotidieque pri, ne tempor diceret oportere has. Id numquam explicari eum. Ut maiorum volutpat sed. At voluptua expetenda usu, sea minimum assueverit ei.
 </p>
