--- a/src/ui-views/welcomeSpeed.html
+++ b/src/ui-views/welcomeSpeed.html
@@ -6,5 +6,6 @@
 
 </div>
 <p>
-   5 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+  In nec civibus maluisset repudiare, doming efficiendi sea ne. Ex vel veniam verterem erroribus, cu solet oportere nec. Mei ad vivendum accusamus assentior, est te habeo nusquam qualisque. Vix veritus dissentiet te, ius dicit praesent eu. Viris alienum ei cum, animal diceret cu eos. Te sed appareat rationibus, ei simul vocibus usu, graeci vidisse molestie no nam.
 </p>
