--- a/src/ui-views/signUp.html
+++ b/src/ui-views/signUp.html
@@ -1,6 +1,45 @@
 
-SIGN UP
-<input ng-model="user.name" type="input" name="name"  placeholder="name">
-<input ng-model="user.email" type="email" name="name"  placeholder="email">
-<input ng-model="user.password" type="password" name="name"  placeholder="password">
-<button ng-click="signUp(user)" type="button" name="button">sign up</button>
+
+
+
+
+
+
+<section class="signup-cont">
+
+  <section class="signup-top">
+
+    <h3>SIGN UP</h3>
+
+    <div class="signin-input">
+        <div class="icon-user signin-user-icon"></div>
+        <input ng-model="user.email" type="email" name="name"  placeholder="email"></input>
+    </div>
+
+    <div class="signin-input">
+        <div class="icon-user signin-user-icon"></div>
+        <input ng-model="user.name" type="input" name="name"  placeholder="name"></input>
+    </div>
+
+    <div class="signin-input">
+        <div class="icon-key signin-key-icon"></div>
+        <input ng-model="user.password" type="password" name="name"  placeholder="password"></input>
+    </div>
+
+    <button ng-click="signUp(user)" type="button" name="button">SIGN UP</button>
+
+  </section>
+
+  <section class="signup-bottom">
+
+    <p>
+      Already have an account? <span ui-sref = "welcome.login">Sign In Now</span>
+    </p>
+
+  </section>
+
+  <section>
+
+  </section>
+
+</section>
