made user infor modal, fixed userHome filepath

--- a/src/ui-views/directiveTmpls/modalTmpl.html
+++ b/src/ui-views/directiveTmpls/modalTmpl.html
@@ -6,7 +6,7 @@
 
         <section class="modal-nav">
 
-            <div class="icon-times-circle close-mod" ng-click="modalOff()"></div>
+            <div class="icon-times-circle close-mod-white" ng-click="modalOff()"></div>
 
         </section>
 
@@ -32,7 +32,7 @@
 
         <section class="modal-nav">
 
-            <div class="icon-times-circle close-mod" ng-click="modalOff()"></div>
+            <div class="icon-times-circle close-mod-blue" ng-click="modalOff()"></div>
 
         </section>
 
