--- a/src/ui-views/userHome.html
+++ b/src/ui-views/userHome.html
@@ -9,7 +9,7 @@
    <div class="side-menu-options">
      <ul>
 
-       <li ng-click="userModal()">
+       <li ng-click="vehicleModal()">
          <div class="truck-user-list">
            <div class="icon-truck"></div>
            <p>
@@ -138,7 +138,9 @@
     <div class="dash">
       <h2>Dashboard</h2>
     </div>
-    <section class="user-info-cont">
+
+
+    <section class="user-info-cont" ng-click="userInfo()">
       <div class="username">
         <p>
           Billy Batson
@@ -153,6 +155,7 @@
 
       </div>
     </section>
+
   </section>
 
   <div class="map" map-lazy-load='https://maps.google.com/maps/api/js'>
