fixed logo, created about page, updated login modals

--- a/src/ui-views/welcome.html
+++ b/src/ui-views/welcome.html
@@ -15,12 +15,12 @@
 
 
         <section class="welcome-menu">
-            <ul>
-                <li ui-sref = "welcome">Home</li>
-                <li>About</li>
-                <li ng-click ='loginModal()' >Login</li>
-                <li ng-click ='signupModal()'>Signup</li>
-            </ul>
+          <ul>
+              <li ui-sref = "welcome">Home</li>
+              <li ui-sref = "about">About</li>
+              <li ng-click ='loginModal()' >Login</li>
+              <li ng-click ='signupModal()'>Signup</li>
+          </ul>
         </section>
 
     </section>
