created TOS and privacy pages, fixed footer opacity issue, added pics

--- a/src/ui-views/about.html
+++ b/src/ui-views/about.html
@@ -2,29 +2,8 @@
 
 <section class="about-background">
 
-    <section class="welcome-header">
-
-
-        <div class="logo-cont">
-
-            <section class="logo">
-
-            </section>
-
-        </div>
-
-
-        <section class="welcome-menu">
-            <ul>
-                <li ui-sref="welcome">Home</li>
-                <li ui-sref="about">About</li>
-                <li ng-click='loginModal()'>Login</li>
-                <li ng-click='signupModal()'>Signup</li>
-            </ul>
-        </section>
-
-    </section>
-
+  <header-dir></header-dir>
+  
     <section class="about-container">
 
         <h1>About Us</h1>
