--- a/src/ui-views/directiveTmpls/footerTmpl.html
+++ b/src/ui-views/directiveTmpls/footerTmpl.html
@@ -22,10 +22,10 @@
 </div>
 
   <ul>
-    <li>PRIVACY POLICY</li>
-    <li>TERMS OF SERVICE</li>
-    <li>ABOUT</li>
-    <li>CONTACT</li>
+    <li ui-sref="privacy">PRIVACY POLICY</li>
+    <li ui-sref="terms">TERMS OF SERVICE</li>
+    <li ui-sref="about">ABOUT</li>
+    <li ui-sref="contact">CONTACT</li>
   </ul>
 
 
