--- a/src/ui-views/signUp.html
+++ b/src/ui-views/signUp.html
@@ -12,7 +12,7 @@
     <h3>SIGN UP</h3>
 
     <div class="signin-input">
-        <div class="icon-user signin-user-icon"></div>
+        <div class="icon-mail signin-user-icon"></div>
         <input ng-model="user.email" type="email" name="name"  placeholder="email"></input>
     </div>
 
