--- a/src/ui-views/welcome.html
+++ b/src/ui-views/welcome.html
@@ -2,28 +2,7 @@
 
 <section class="welcome-background">
 
-    <section class="welcome-header">
-
-
-        <div class="logo-cont">
-
-            <section class="logo">
-
-            </section>
-
-        </div>
-
-
-        <section class="welcome-menu">
-          <ul>
-              <li ui-sref = "welcome">Home</li>
-              <li ui-sref = "about">About</li>
-              <li ng-click ='loginModal()' >Login</li>
-              <li ng-click ='signupModal()'>Signup</li>
-          </ul>
-        </section>
-
-    </section>
+    <header-dir></header-dir>
 
     <section class="welcome-container">
 
