--- a/src/ui-views/userHome.html
+++ b/src/ui-views/userHome.html
@@ -158,32 +158,7 @@
 
   </section>
 
-  <!-- <div class="map" map-lazy-load='https://maps.google.com/maps/api/js'> -->
-    <!-- <ng-map zoom='15' center='[40.226209, -111.660947]'> -->
-    <!-- <marker position="[40.22688, -111.693654]" title="first">
-
-    </marker>
-
-    <marker style="" position="[40.29688, -111.8762]" title="second">
-
-    </marker>
-
-    <marker position="[40.18688, -111.8703]" title="third" draggable="true">
-
-    </marker> -->
-
-    <!-- <shape  name="circle"
-       stroke-color="#3c3d3c"
-       stroke-opacity="0.8"
-       stroke-weight="2"
-       fill-color="#3c3d3c"
-       fill-opacity="0.35"
-       center="[40.7599, -111.9003]"
-       radius="9502">
-     </shape> -->
-
-    <!-- </ng-map> -->
-  <!-- </div> -->
+  <ng-map zoom='15' center='[40.226209, -111.660947]'></ng-map>
 
 </section>
 
