These are unknown changes

--- a/src/ui-views/userHome.html
+++ b/src/ui-views/userHome.html
@@ -16,18 +16,14 @@
              Ddfb
            </p>
          </div>
-
          <div class="side-menu-end">
          <section class="car-status">
-
            <p id="car-idle">
              Idle
            </p>
-
          </section>
         <div class="icon-right-open"></div>
         </div>
-
        </li>
 
        <li>
@@ -158,9 +154,9 @@
 
   </section>
 
-  <!-- <div class="map" map-lazy-load='https://maps.google.com/maps/api/js'> -->
-    <!-- <ng-map zoom='15' center='[40.226209, -111.660947]'> -->
-    <!-- <marker position="[40.22688, -111.693654]" title="first">
+  <div class="map" map-lazy-load='https://maps.google.com/maps/api/js'>
+    <ng-map zoom='15' center='[40.226209, -111.660947]'>
+    <marker position="[40.22688, -111.693654]" title="first">
 
     </marker>
 
@@ -170,7 +166,7 @@
 
     <marker position="[40.18688, -111.8703]" title="third" draggable="true">
 
-    </marker> -->
+    </marker>
 
     <!-- <shape  name="circle"
        stroke-color="#3c3d3c"
@@ -182,8 +178,8 @@
        radius="9502">
      </shape> -->
 
-    <!-- </ng-map> -->
-  <!-- </div> -->
+    </ng-map>
+  </div>
 
 </section>
 
