--- a/src/ui-views/vehicleInfo.html
+++ b/src/ui-views/vehicleInfo.html
@@ -7,13 +7,13 @@
 
   <section class="vehicle-tabs">
 
-  <div ui-sref="userHome.vehicleInfo.location" class="location-tab">
-    <p>
+  <div ui-sref="userHome.vehicleInfo.location" ng-click="setTab(1)" ng-class="{active: isSet(1) }">
+    <p >
       Location
     </p>
   </div>
 
-  <div class="behavior-tab">
+  <div  ng-click="setTab(2)" ng-class="{active: isSet(2)}">
 <p>
   Behavior
 </p>
