added lines to map

--- a/src/ui-views/userHome.html
+++ b/src/ui-views/userHome.html
@@ -4,7 +4,7 @@
 
 <section class="main-side-menu">
    <div class="side-menu-top">
-     <img src="./LogoTextTeal.png" alt="" />
+     <img ui-sref="welcome" src="./LogoTextTeal.png" alt="" />
    </div>
    <div class="side-menu-options">
      <ul>
