centered the map

--- a/src/ui-views/vehicleLocation.html
+++ b/src/ui-views/vehicleLocation.html
@@ -1,18 +1,24 @@
 <section class="vehicle-location-view">
   <section class="location-left">
-<section class="location-header">
 
-    <h4>Select Date</h4>
-
-    <datepicker>
-      <input ng-model="date" type="text" placeholder="Select Date"/>
+    <section class="location-header">
+        <datepicker date-format="EEE MM/dd/yyyy" selector="form-control">
+       <div class="input-group">
+           <input class="form-control" placeholder="Choose a date"/>
+           <span class="input-group-addon" style="cursor: pointer">
+           <i class="fa fa-lg fa-calendar"></i>
+           </span>
     </datepicker>
+      </div>
+        <div class="icon-caret-up-down reverseBtn"></div>
+    </section>
 
-
-</section>
 <section class="vehicle-locations">
   <ul >
     <li ng-repeat="address in addresses track by $index">
+
+      <div class="icon-map-marker"></div>
+
       {{address.time | date: 'shortDate'}}
      {{address.time | date: 'shortTime'}}
 
@@ -24,7 +30,7 @@
 </section>
 </section>
 
-  <ng-map zoom='15' center='[40.226209, -111.660947]'>
+  <ng-map zoom='15' center='{{lines}}[0]'>
     <marker ng-repeat="pin in pins track by $index" position="{{pin}}">
       <marker>
 
