--- a/src/ui-views/vehicleLocation.html
+++ b/src/ui-views/vehicleLocation.html
@@ -3,6 +3,8 @@
 
     <section class="location-header">
 
+        <div class="icon-calender"></div>
+
         <datepicker date-format="EEE MM/dd/yyyy" selector="form-control">
 
              <div class="input-group">
@@ -22,7 +24,7 @@
 
           <div class="icon-map-marker"></div>
 
-          {{address.time | date: 'shortDate'}}
+          <!-- {{address.time | date: 'shortDate'}} -->
           {{address.time | date: 'shortTime'}}
 
           <br>
