fixed styling on modal, added clickable tags

--- a/src/ui-views/vehicleLocation.html
+++ b/src/ui-views/vehicleLocation.html
@@ -3,7 +3,7 @@
 
     <section class="location-header">
 
-        <div class="icon-calender"></div>
+        <!-- <div class="icon-calender"></div> -->
 
         <datepicker date-format="EEE MM/dd/yyyy" selector="form-control">
 
@@ -14,7 +14,7 @@
 
         </datepicker>
 
-        <div class="icon-caret-up-down reverseBtn"></div>
+        <div class="icon-caret-up-down"></div>
 
     </section>
 
@@ -22,10 +22,16 @@
       <ul >
         <li ng-repeat="address in addresses track by $index">
 
-          <div class="icon-map-marker"></div>
+          <div>
 
-          <!-- {{address.time | date: 'shortDate'}} -->
-          {{address.time | date: 'shortTime'}}
+            <div class="icon-map-marker"></div>
+
+            <!-- {{address.time | date: 'shortDate'}} -->
+            {{address.time | date: 'shortTime'}}
+
+          </div>
+
+
 
           <br>
           {{address.address}}
