added functionality in admin for CRUD on users and vehicles and fixed local auth and vehcile controller

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
    <script src="https://maps.google.com/maps/api/js?key=AIzaSyCE-IsoxmgBiFRKXn0ZgZcYlLZ1FSvpJns"></script>
     <script src="./angular/angular.js"></script>
     <script src=./angular-ui-router/release/angular-ui-router.js></script>
-    <!-- <script src="https://cdn.jsdelivr.net/satellizer/0.15.0/satellizer.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/satellizer/0.15.4/satellizer.min.js"></script>
     <script src="./bundle.js"></script>
   </body>
 </html>
