--- a/src/ui-views/vehicleLocation.html
+++ b/src/ui-views/vehicleLocation.html
@@ -20,7 +20,7 @@
 
     <section class="vehicle-locations">
       <ul >
-        <li ng-repeat="address in addresses track by $index, direction in directions by $index">
+        <li ng-repeat="address in addresses track by $index">
 
           <div>
 
