finished CRUD for vehicles

--- a/src/ui-views/updateVehicle.html
+++ b/src/ui-views/updateVehicle.html
@@ -2,3 +2,4 @@
   {{vehicle.name}} <input placeholder="new name" ng-model='newVehicle.name'><br>
   {{vehicle.esn}} <input placeholder="new ESN" ng-model='newVehicle.esn'>
 </div>
+    <button type="button" ng-click="submitChanges(newVehicle)">Submit Changes</button>
