--- a/src/ui-views/admin.html
+++ b/src/ui-views/admin.html
@@ -13,7 +13,7 @@ Search: <input type="text" ng-model="searched">
       {{user.name}} <br>
       {{user.email}}
       <button type="button" ng-show="$index === selected" ng-click="deleteUser($index)">Delete User</button>
-      <button type="button" ng-show="$index === selected" ng-click="showUser($index)">Show User</button>
+      <button type="button" ng-show="$index === selected" ng-click="showUser($index)">Show Vehicles</button>
       <button type="button" ng-show="$index === selected" ng-click="updateUser($index)">Update User</button>
   </li>
 
