Everything in userinfo modal now even, has pay now and logOut button w/ no functionality

--- a/src/ui-views/userInfo.html
+++ b/src/ui-views/userInfo.html
@@ -24,11 +24,19 @@
         </div>
 
     </div>
+    <div class="the-buttons">
+      <div class="button-container">
+        <button type="button" name="button"> Pay Now </button>
 
-    <div class="button-container">
-      <button type="button" name="button"> Logout </button>
+      </div>
+
+      <div class="button-container">
+        <button type="button" name="button"> Logout </button>
+
+      </div>
 
     </div>
+
 
   </div>
 
