added hover, and animation to list, buttons have hover

--- a/src/ui-views/userInfo.html
+++ b/src/ui-views/userInfo.html
@@ -26,7 +26,7 @@
     </div>
     <div class="the-buttons">
       <div class="button-container">
-        <button type="button" name="button"> Pay Now </button>
+        <button class='pay-button' type="button" name="button"> Pay Now </button>
 
       </div>
 
